# go2_odometry

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  bash_launch.sh  package.xml
.github/workflows/: precommit.yml
config/: go2_ekf.yaml
debug_scripts/: compare_bag_inekf_odometry.py  pose_comparison.py  print_lowstate_foot_arrays.py  save_sensor_msgs.py
launch/: go2_dumb_odometry.launch.py  go2_fake_odom.launch.py  go2_full_odometry.launch.py  go2_inekf_odometry.launch.py  go2_mocap.launch.py  go2_odometry_switch.launch.py  go2_state_publisher.launch.py
msg/: OdometryVector.msg
ressources/: Go2-QTM-Body.xml  README.md
ressources/CAD/: go2_mocap_attachments.FCStd  go2_mocap_back.FCStd  go2_mocap_rails.FCStd
ressources/STL/: go2_mocap_back.stl  go2_mocap_helmet.stl  go2_mocap_rails.stl
scripts/: dumb_odom.py  fake_odom.py  feet_to_odom.py  feet_to_odom_inekf.py  inekf_core.py  inekf_odom.py  mocap_base_pose.py  pose_comparison.py
src/: feet_to_odom.cpp  go2_state_converter_node.cpp  inekf_odometry.cpp  state_converter_node.cpp
